--- a/block-BNaaef/blogapp/package.json
+++ b/block-BNaaef/blogapp/package.json
@@ -19,6 +19,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.10",
     "mongoose-slug-generator": "^1.0.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-github2": "^0.1.12"
   }
 }
